--- a/DBSL_ProposalGenerator/ivy.xml
+++ b/DBSL_ProposalGenerator/ivy.xml
@@ -68,5 +68,9 @@
    name="jpacontainer" 
    rev="3.2.0" />
 			<dependency org="org.vaadin.addon" name="easyuploads" rev="7.4.1"/>
+			<dependency 
+   org="org.vaadin.addons" 
+   name="wizards-for-vaadin" 
+   rev="1.1.0" />
 	</dependencies>
 </ivy-module>
