Add employee UI

--- a/DBSL_ProposalGenerator/.settings/com.vaadin.integration.eclipse.prefs
+++ b/DBSL_ProposalGenerator/.settings/com.vaadin.integration.eclipse.prefs
@@ -1,4 +1,4 @@
 com.vaadin.integration.eclipse.useLatestNightly=false
-com.vaadin.integration.eclipse.widgetsetCompilationEta=71548
-com.vaadin.integration.eclipse.widgetsetDirty=true
+com.vaadin.integration.eclipse.widgetsetCompilationEta=90061
+com.vaadin.integration.eclipse.widgetsetDirty=false
 eclipse.preferences.version=1
